Fix logos. Adjust first screen spacing.

--- a/_sass/minima/_includes.scss
+++ b/_sass/minima/_includes.scss
@@ -336,7 +336,7 @@ body {
 
 .page-intro {
   @include relative-font-size(1.8);
-  padding: 10% 3%;
+  padding: 10% 4%;
   margin: 0;
   font-weight: 600;
   letter-spacing: 0.5px;
