--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -4,18 +4,16 @@
 
 .home {
   #home-screen-jonathankim {
-    height: calc(90vh - #{$site-header-height});
+    height: calc(100vh - #{$site-header-height} * 2);
     .portrait-photo {
-      padding-top: 20vh;
-      height: 60vh;
+      max-height: 70vh;
       opacity: 0; // Only show when the background is inverted.
       transition: opacity 0.8s;
     }
     .page-intro {
       @include relative-font-size(2.2);
-      position: relative;
-      top: -20vh;
-      padding-top: 0;
+      position: absolute;
+      top: 45%;
       color: $background-color;
       animation: delayedfadein 2s;
     }
@@ -35,12 +33,8 @@
   }
   #home-screen-designer .home-sample-container {
     height: 20vh;
-    flex-wrap: wrap;
-    .sample {
-      width: 20vw;
-    }
-    img {
-      max-height: 20vh;
+    @include media-query($on-palm) {
+      height: 10vh;
     }
   }
 }
